--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep</title>
-    <link href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="StyleSheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <img src="img/keep_logo.png">
+        <a href="#">Keep</a>
+        <div class="search">
+        <input type="search" name="search" placeholder="search">
+        <span class="material-icons searchIcon">
+        search
+        </span>
+        </div>
+    </header>
 </body>
 </html>
