Create textBox ready

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
         </span>
         </div>
     </header>
+    <!-- Main Content -->
+    <div>
+        <div id="typenote">
+        <input type="text" placeholder="Take a note">
+        </div>
+    </div>
 </body>
 </html>
