Implement Popup for each card

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep</title>
+    <link rel="StyleSheet"  href="https://cdn.jsdelivr.net/gh/xsarthakjain/skatch.github.io/dist/css/skatch.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="StyleSheet" href="css/style.css">
 </head>
-<body style="overflow-x: hidden;">
+<body">
     <!-- Header -->
     <header>
         <img src="img/keep_logo.png">
@@ -46,6 +47,34 @@
             </div>
         </div>
     </div>
+
+    <!-- popup -->
+    
+
+<div class="Skatchpopup PopupCenter popupmedium" id="popUp2" style="background-color: #ffffff;">
+    <div>
+        <i class="material-icons dismiss-popup-btn SkatchCloseIcon"><span>close</span></i>
+    </div>
+    <br clear="both">
+    <div class="popupTitle">
+        <p id="popupInputTitle"></p>
+        <span class="material-icons pin" id="popupPin">
+            push_pin
+        </span>
+    </div>
+    
+    <div class="SkatchPopupdescription" id="popupInputDescription">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nihil provident voluptatem nulla placeat
+    </div>
+    <br clear="both">
+    <div class="SkatchPopupdismiss-btn">
+      <button class="dismiss-popup-btn">
+        Dismiss
+      </button>
+    </div>
+  </div>
 </body>
 <script src="js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/xsarthakjain/skatch.github.io/dist/js/skatch.min.js"></script>
+
 </html>
