add validation in take a note

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="StyleSheet" href="css/style.css">
 </head>
-<body">
+<body style="overflow-x: hidden;">
     <!-- Header -->
     <header>
         <img src="img/keep_logo.png">
