add Search functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/keep_logo.png">
         <a href="#">Keep</a>
         <div class="search">
-        <input type="search" name="search" placeholder="search">
+        <input type="search" name="search" placeholder="search" id="searchBarInputBox">
         <span class="material-icons searchIcon">
         search
         </span>
@@ -45,6 +45,7 @@
             <div class="nonPinItem">
                 <h4>Others</h4>
             </div>
+            <div class="searchPlace"></div>
         </div>
     </div>
 
